--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,9 @@ dependencies {
 }
 
 tasks.jar{
+	enabled = false
 	manifest {
-		attributes["Main-Class"] = "pedro.zandonai.Main"
+		attributes 'Main-Class': 'pedro.zandonai.Main'
 	}
 }
 
